--- a/TestMyMemory/testmymemory.html
+++ b/TestMyMemory/testmymemory.html
@@ -19,14 +19,13 @@
         </div>
 		<div id="start">
 			<select id="WhatToSelect">
-				<option value="http://sampleserver6.arcgisonline.com/arcgis/rest/services/USA/MapServer/2,state_name,">States</option>
-				<option value="http://sampleserver6.arcgisonline.com/arcgis/rest/services/USA/MapServer/3,name,state_name='California'">Counties in California</option>
-				<option value="http://sampleserver6.arcgisonline.com/arcgis/rest/services/USA/MapServer/3,name,state_name='Mississippi'">Counties in Mississippi</option>
-				
+				<option value="http://sampleserver6.arcgisonline.com/arcgis/rest/services/USA/MapServer/2,state_name,,[-95.625: 39.243],4">States</option>
+				<option value="http://sampleserver6.arcgisonline.com/arcgis/rest/services/USA/MapServer/3,name,state_name='California',[-115.511: 32.779],8">Counties in California</option>
+				<option value="http://sampleserver6.arcgisonline.com/arcgis/rest/services/USA/MapServer/3,name,state_name='Mississippi',[-80.94: 33.646],8">Counties in Mississippi</option>				
 			</select>
 			<button onclick="initFunctionality()">Go</button>
 		</div>
-            <div id="title" style="text-align:left;display:none;">
+            <div id="infospace" style="text-align:left;display:none;">
 			<div>
 				 Find: <span id="nametofind"/> 
 				 </div>
@@ -34,6 +33,7 @@
 					<div>Down:<span id="found" > </span></div>
 					<div>To Go: <span id="togo" ></span></div>	
 					<div>Mistakes: <span id="mistake" ></span></div>	
+			<button onclick="start.style.display='';infospace.style.display='none';">Back</button>
 				</div>  	
 				
 			</div>
