--- a/CountyDestroyer/index.html
+++ b/CountyDestroyer/index.html
@@ -12,8 +12,9 @@
   </head>
   <body class="claro">
     <div id="map"></div>
-    <div id="score">
-      Clear as many counties as you can!
+    <div id="info">
+      <div id="score">Clear as many counties as you can!</div>
+      <button id="reset">Reset</button>
     </div>
   </body>
   <script defer src="http://d3js.org/d3.v3.min.js"></script>
